# async-rayon

./: .markdownlint.json  Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  par_iter_stream.rs  prelude.rs  rayon_future.rs  rayon_map.rs
src/stream/: mod.rs  par_iter_stream.rs  rayon_map.rs
