[package]
name = "async-rayon"
version = "0.1.0"
authors = ["Raphael Bost <raphael_bost@alumni.brown.edu>"]
edition = "2018"
description = "Port Rayon's concurrency to the async world."
repository = "https://github.com/rbost/async-rayon"
categories = ["concurrency", "asynchronous"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
flume = "0.10.12"
futures = "0.3.21"
pin-project = "1.0.10"
rayon = "1.5.1"

[dev-dependencies]
tokio = { version = "1.6.0", features = ["rt"] }
